{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 173,
  "lineage": "affea382-0b68-5721-30ea-fd6c9692dcf2",
  "resources": [
    {
      "module": "module.alb_client",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:loadbalancer/app/alb-soma-deploy-cli/dba2d745131a2340",
            "arn_suffix": "app/alb-soma-deploy-cli/dba2d745131a2340",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-soma-deploy-cli-1053740613.us-gov-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:loadbalancer/app/alb-soma-deploy-cli/dba2d745131a2340",
            "idle_timeout": 30,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-soma-deploy-cli",
            "security_groups": [
              "sg-0169ae8c53a30e548"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006f056179cfcbdbf"
              },
              {
                "subnet_id": "subnet-082461e00ea4f3e1d"
              }
            ],
            "subnets": [
              "subnet-006f056179cfcbdbf",
              "subnet-082461e00ea4f3e1d"
            ],
            "vpc_id": "vpc-0de999c9252cc5dee",
            "zone_id": "Z33AYJ8TM3BH4J"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_client.aws_security_group.sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_client",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:listener/app/alb-soma-deploy-cli/dba2d745131a2340/4be413ab4df07ef1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:targetgroup/tg-soma-deploy-c-g/eeaafb5168e80d21",
                "type": "forward"
              }
            ],
            "id": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:listener/app/alb-soma-deploy-cli/dba2d745131a2340/4be413ab4df07ef1",
            "load_balancer_arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:loadbalancer/app/alb-soma-deploy-cli/dba2d745131a2340",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_client.aws_alb.alb",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_client.aws_security_group.sg",
            "module.target_group_client_blue.aws_alb_target_group.target_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_server",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:loadbalancer/app/alb-soma-deploy-ser/d2dba280cef2a24c",
            "arn_suffix": "app/alb-soma-deploy-ser/d2dba280cef2a24c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-soma-deploy-ser-593936164.us-gov-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:loadbalancer/app/alb-soma-deploy-ser/d2dba280cef2a24c",
            "idle_timeout": 30,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-soma-deploy-ser",
            "security_groups": [
              "sg-042c21e476e10e4f8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006f056179cfcbdbf"
              },
              {
                "subnet_id": "subnet-082461e00ea4f3e1d"
              }
            ],
            "subnets": [
              "subnet-006f056179cfcbdbf",
              "subnet-082461e00ea4f3e1d"
            ],
            "vpc_id": "vpc-0de999c9252cc5dee",
            "zone_id": "Z33AYJ8TM3BH4J"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_server.aws_security_group.sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_server",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:listener/app/alb-soma-deploy-ser/d2dba280cef2a24c/ef08b1139db5ef65",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:targetgroup/tg-soma-deploy-s-g/2ba2de18a21735a8",
                "type": "forward"
              }
            ],
            "id": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:listener/app/alb-soma-deploy-ser/d2dba280cef2a24c/ef08b1139db5ef65",
            "load_balancer_arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:loadbalancer/app/alb-soma-deploy-ser/d2dba280cef2a24c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_server.aws_alb.alb",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables",
            "module.security_group_alb_server.aws_security_group.sg",
            "module.target_group_server_blue.aws_alb_target_group.target_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:343663719667:route-table/rtb-056b95a14542ebaf0",
            "default_route_table_id": "rtb-056b95a14542ebaf0",
            "id": "rtb-056b95a14542ebaf0",
            "owner_id": "343663719667",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b0296897e98887e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt_soma-deploy"
            },
            "tags_all": {
              "Name": "public_rt_soma-deploy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de999c9252cc5dee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001ca26a547eb3063",
            "association_id": "eipassoc-01e87474a9b4e13b5",
            "domain": "vpc",
            "id": "eipalloc-001ca26a547eb3063",
            "network_border_group": "us-gov-west-1",
            "network_interface": "eni-0fc2e489cd90d5e43",
            "private_dns": "ip-10-120-2-32.us-gov-west-1.compute.internal",
            "private_ip": "10.120.2.32",
            "public_dns": "ec2-15-200-117-87.us-gov-west-1.compute.amazonaws.com",
            "public_ip": "15.200.117.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-soma-deploy"
            },
            "tags_all": {
              "Name": "eip-soma-deploy"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:343663719667:internet-gateway/igw-06b0296897e98887e",
            "id": "igw-06b0296897e98887e",
            "owner_id": "343663719667",
            "tags": {
              "Name": "igw_soma-deploy"
            },
            "tags_all": {
              "Name": "igw_soma-deploy"
            },
            "vpc_id": "vpc-0de999c9252cc5dee"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001ca26a547eb3063",
            "connectivity_type": "public",
            "id": "nat-0d0f11a107b7cc0ca",
            "network_interface_id": "eni-0fc2e489cd90d5e43",
            "private_ip": "10.120.2.32",
            "public_ip": "15.200.117.87",
            "subnet_id": "subnet-082461e00ea4f3e1d",
            "tags": {
              "Name": "nat_soma-deploy"
            },
            "tags_all": {
              "Name": "nat_soma-deploy"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:343663719667:route-table/rtb-0dbcb9cb06eaa3cc1",
            "id": "rtb-0dbcb9cb06eaa3cc1",
            "owner_id": "343663719667",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d0f11a107b7cc0ca",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt_soma-deploy"
            },
            "tags_all": {
              "Name": "private_rt_soma-deploy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de999c9252cc5dee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_priv_subnets_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6a16359c11faf62",
            "route_table_id": "rtb-0dbcb9cb06eaa3cc1",
            "subnet_id": "subnet-0d7999214859b2dbd"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_client",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be4336bb2bded026",
            "route_table_id": "rtb-0dbcb9cb06eaa3cc1",
            "subnet_id": "subnet-02d46b2d5789367dc"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_client",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_priv_subnets_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060d0ae9e85587abc",
            "route_table_id": "rtb-0dbcb9cb06eaa3cc1",
            "subnet_id": "subnet-01c78c699cb9efbe5"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_server",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef330a4fef2f8dad",
            "route_table_id": "rtb-0dbcb9cb06eaa3cc1",
            "subnet_id": "subnet-0dce3ee8e489cbc66"
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_route_table.rt_private",
            "module.networking.aws_subnet.private_subnets_server",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_pub_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0564845d9da3143f3",
            "route_table_id": "rtb-056b95a14542ebaf0",
            "subnet_id": "subnet-082461e00ea4f3e1d"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023953896841c8c44",
            "route_table_id": "rtb-056b95a14542ebaf0",
            "subnet_id": "subnet-006f056179cfcbdbf"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:343663719667:subnet/subnet-0d7999214859b2dbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1a",
            "availability_zone_id": "usgw1-az1",
            "cidr_block": "10.120.6.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7999214859b2dbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343663719667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_client_0_soma-deploy"
            },
            "tags_all": {
              "Name": "private_subnet_client_0_soma-deploy"
            },
            "vpc_id": "vpc-0de999c9252cc5dee"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:343663719667:subnet/subnet-02d46b2d5789367dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1b",
            "availability_zone_id": "usgw1-az2",
            "cidr_block": "10.120.8.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d46b2d5789367dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343663719667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_client_1_soma-deploy"
            },
            "tags_all": {
              "Name": "private_subnet_client_1_soma-deploy"
            },
            "vpc_id": "vpc-0de999c9252cc5dee"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:343663719667:subnet/subnet-01c78c699cb9efbe5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1a",
            "availability_zone_id": "usgw1-az1",
            "cidr_block": "10.120.10.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c78c699cb9efbe5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343663719667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_server_0_soma-deploy"
            },
            "tags_all": {
              "Name": "private_subnet_server_0_soma-deploy"
            },
            "vpc_id": "vpc-0de999c9252cc5dee"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:343663719667:subnet/subnet-0dce3ee8e489cbc66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1b",
            "availability_zone_id": "usgw1-az2",
            "cidr_block": "10.120.12.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dce3ee8e489cbc66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343663719667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_server_1_soma-deploy"
            },
            "tags_all": {
              "Name": "private_subnet_server_1_soma-deploy"
            },
            "vpc_id": "vpc-0de999c9252cc5dee"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:343663719667:subnet/subnet-082461e00ea4f3e1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1a",
            "availability_zone_id": "usgw1-az1",
            "cidr_block": "10.120.2.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082461e00ea4f3e1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343663719667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_0_soma-deploy"
            },
            "tags_all": {
              "Name": "public_subnet_0_soma-deploy"
            },
            "vpc_id": "vpc-0de999c9252cc5dee"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:343663719667:subnet/subnet-006f056179cfcbdbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1b",
            "availability_zone_id": "usgw1-az2",
            "cidr_block": "10.120.4.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006f056179cfcbdbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343663719667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1_soma-deploy"
            },
            "tags_all": {
              "Name": "public_subnet_1_soma-deploy"
            },
            "vpc_id": "vpc-0de999c9252cc5dee"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.networking.data.aws_availability_zones.az_availables"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:343663719667:vpc/vpc-0de999c9252cc5dee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.120.0.0/16",
            "default_network_acl_id": "acl-0a1f99c4664dda239",
            "default_route_table_id": "rtb-056b95a14542ebaf0",
            "default_security_group_id": "sg-07b676382be46f399",
            "dhcp_options_id": "dopt-7443a710",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0de999c9252cc5dee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-056b95a14542ebaf0",
            "owner_id": "343663719667",
            "tags": {
              "Name": "vpc_soma-deploy"
            },
            "tags_all": {
              "Name": "vpc_soma-deploy"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_alb_client",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:343663719667:security-group/sg-0169ae8c53a30e548",
            "description": "Controls access to the client ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0169ae8c53a30e548",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-soma-deploy-client",
            "name_prefix": "",
            "owner_id": "343663719667",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-soma-deploy-client"
            },
            "tags_all": {
              "Name": "alb-soma-deploy-client"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de999c9252cc5dee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_alb_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:343663719667:security-group/sg-042c21e476e10e4f8",
            "description": "Controls access to the server ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042c21e476e10e4f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-soma-deploy-server",
            "name_prefix": "",
            "owner_id": "343663719667",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-soma-deploy-server"
            },
            "tags_all": {
              "Name": "alb-soma-deploy-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de999c9252cc5dee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_ecs_task_client",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:343663719667:security-group/sg-06ed7791f063d0f16",
            "description": "Controls access to the client ECS task",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ed7791f063d0f16",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0169ae8c53a30e548"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-task-soma-deploy-client",
            "name_prefix": "",
            "owner_id": "343663719667",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-task-soma-deploy-client"
            },
            "tags_all": {
              "Name": "ecs-task-soma-deploy-client"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de999c9252cc5dee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.security_group_alb_client.aws_security_group.sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_ecs_task_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:343663719667:security-group/sg-0626756e266027d14",
            "description": "Controls access to the server ECS task",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0626756e266027d14",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-042c21e476e10e4f8"
                ],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "ecs-task-soma-deploy-server",
            "name_prefix": "",
            "owner_id": "343663719667",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-task-soma-deploy-server"
            },
            "tags_all": {
              "Name": "ecs-task-soma-deploy-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de999c9252cc5dee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc",
            "module.security_group_alb_server.aws_security_group.sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_client_blue",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:targetgroup/tg-soma-deploy-c-b/a951904d52987582",
            "arn_suffix": "targetgroup/tg-soma-deploy-c-b/a951904d52987582",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:targetgroup/tg-soma-deploy-c-b/a951904d52987582",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-soma-deploy-c-b",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0de999c9252cc5dee"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_client_green",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:targetgroup/tg-soma-deploy-c-g/eeaafb5168e80d21",
            "arn_suffix": "targetgroup/tg-soma-deploy-c-g/eeaafb5168e80d21",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:targetgroup/tg-soma-deploy-c-g/eeaafb5168e80d21",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-soma-deploy-c-g",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0de999c9252cc5dee"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_server_blue",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:targetgroup/tg-soma-deploy-s-b/14464744ea6a2b26",
            "arn_suffix": "targetgroup/tg-soma-deploy-s-b/14464744ea6a2b26",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/status",
                "port": "3001",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:targetgroup/tg-soma-deploy-s-b/14464744ea6a2b26",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-soma-deploy-s-b",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0de999c9252cc5dee"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.target_group_server_green",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:targetgroup/tg-soma-deploy-s-g/2ba2de18a21735a8",
            "arn_suffix": "targetgroup/tg-soma-deploy-s-g/2ba2de18a21735a8",
            "connection_termination": false,
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/status",
                "port": "3001",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws-us-gov:elasticloadbalancing:us-gov-west-1:343663719667:targetgroup/tg-soma-deploy-s-g/2ba2de18a21735a8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-soma-deploy-s-g",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0de999c9252cc5dee"
          },
          "dependencies": [
            "module.networking.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}